--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lucide-react": "^0.469.0",
-    "next-auth": "^5.0.0",
+    "next-auth": "^5.0.0-beta.25",
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "zod": "^3.22.4"
