--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ frontend:
       commands:
         - if [ -f package-lock.json ]; then npm ci --include=dev; else npm install --include=dev; fi
         - npx prisma validate
+        - npx prisma migrate deploy
         - npx prisma generate
     build:
       commands:
