Add Amplify/RDS DB diagnostics and harden deployment checks

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=replace_with_long_random_string
 
 # Database (PostgreSQL)
-# e.g. postgresql://user:password@localhost:5432/healingineast
+# local: postgresql://postgres:postgres@localhost:5432/healingineast
+# AWS RDS: postgresql://USER:PASSWORD@your-rds-endpoint.region.rds.amazonaws.com:5432/DB_NAME?sslmode=require
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/healingineast
 
 # WhatsApp
