--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,9 @@ frontend:
         - if [ -f package-lock.json ]; then npm ci --include=dev; else npm install --include=dev; fi
         - test -n "$DATABASE_URL" || (echo "[Amplify] DATABASE_URL is missing. Add it in App settings > Environment variables for this branch." && exit 1)
         - test -n "$NEXTAUTH_SECRET" || (echo "[Amplify] NEXTAUTH_SECRET is missing. Add it in App settings > Environment variables for this branch." && exit 1)
+        - node -e "const u=process.env.DATABASE_URL||''; if(!/^postgres(ql)?:\/\//.test(u)){console.error('[Amplify] DATABASE_URL must start with postgres:// or postgresql://'); process.exit(1)}"
         - npx prisma validate
+        - npx prisma migrate deploy
         - npx prisma generate
     build:
       commands:
