Harden Amplify auth env checks and lock dependencies

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,9 @@ frontend:
         - if [ -f package-lock.json ]; then npm ci --include=dev; else npm install --include=dev; fi
         - test -n "$DATABASE_URL" || (echo "[Amplify] DATABASE_URL is missing. Add it in App settings > Environment variables for this branch." && exit 1)
         - test -n "$NEXTAUTH_SECRET" || (echo "[Amplify] NEXTAUTH_SECRET is missing. Add it in App settings > Environment variables for this branch." && exit 1)
+        - test -n "$NEXTAUTH_URL" || (echo "[Amplify] NEXTAUTH_URL is missing. Add your branch URL root (no path), e.g. https://main.xxxxx.amplifyapp.com" && exit 1)
         - node -e "const u=process.env.DATABASE_URL||''; if(!/^postgres(ql)?:\/\//.test(u)){console.error('[Amplify] DATABASE_URL must start with postgres:// or postgresql://'); process.exit(1)}"
+        - node -e "const u=process.env.NEXTAUTH_URL||''; if(!/^https?:\/\//.test(u)){console.error('[Amplify] NEXTAUTH_URL must start with http:// or https:// and should not include a path'); process.exit(1)}"
         - npx prisma validate
         - npx prisma migrate deploy
         - npx prisma generate
