Add VPC signup bridge fallback for Amplify runtime DB failures

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ NEXTAUTH_SECRET=replace_with_long_random_string
 # Better: use AWS RDS Proxy endpoint in place of direct RDS endpoint.
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/healingineast
 
+# Optional out-of-the-box fallback for Amplify SSR runtime:
+# DATABASE_URL=prisma://accelerate.prisma-data.net/?api_key=YOUR_KEY
+# DIRECT_DATABASE_URL=postgresql://USER:PASSWORD@your-rds-endpoint.region.rds.amazonaws.com:5432/DB_NAME?sslmode=require
+DIRECT_DATABASE_URL=
+
 # WhatsApp
 NEXT_PUBLIC_WHATSAPP_NUMBER=919999999999
 
