Fix Amplify push JSON robustness and add validation script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "validate:amplify": "./scripts_validate_amplify_json.sh"
   },
   "dependencies": {
     "next": "14.1.0",
