--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,14 @@ CONTACT_EMAIL=care@healingineast.com
 
 # Auth
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=replace_with_long_random_string
+NEXTAUTH_SECRET=Information12345
 
 # Database (PostgreSQL)
 # e.g. postgresql://user:password@localhost:5432/healingineast
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/healingineast
+DATABASE_URL=postgresql://postgres:Information12345@database-1.cjo6ma0gqnu3.ap-south-1.rds.amazonaws.com:5432/database-1
 
 # WhatsApp
-NEXT_PUBLIC_WHATSAPP_NUMBER=919999999999
+NEXT_PUBLIC_WHATSAPP_NUMBER=919016307635
 
 # Razorpay (LIVE or TEST keys)
 NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_XXXXXXXXXXXXXXXX
