--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "lucide-react": "^0.469.0",
-    "next-auth": "^5.0.0",
+    "next-auth": "^4.24.7",
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "zod": "^3.22.4"
