--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 
 # Base
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=https://main.d3dbbh8ybg1mbj.amplifyapp.com/
 CONTACT_EMAIL=care@healingineast.com
 
 # Auth
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://main.d3dbbh8ybg1mbj.amplifyapp.com/
 NEXTAUTH_SECRET=Information12345
 
 # Database (PostgreSQL)
 # e.g. postgresql://user:password@localhost:5432/healingineast
-DATABASE_URL=postgresql://postgres:<PASSWORD>@database-1.cjo6ma0gqnu3.ap-south-1.rds.amazonaws.com:5432/database-1?schema=public&sslmode=require
+DATABASE_URL=postgresql://postgres:Information12345@database-1.cjo6ma0gqnu3.ap-south-1.rds.amazonaws.com:5432/database-1?schema=public&sslmode=require
 
 # WhatsApp
 NEXT_PUBLIC_WHATSAPP_NUMBER=919016307635
